--- a/src/Projekt/Okienka/OkienkaFNS - Pracownicy.fxml
+++ b/src/Projekt/Okienka/OkienkaFNS - Pracownicy.fxml
@@ -9,14 +9,14 @@
 <?import javafx.scene.layout.AnchorPane?>
 <?import javafx.scene.text.Font?>
 
-<AnchorPane maxHeight="768.0" maxWidth="1024.0" minHeight="663.0" minWidth="1024.0" prefHeight="663.0" prefWidth="1024.0" xmlns="http://javafx.com/javafx/9.0.1" xmlns:fx="http://javafx.com/fxml/1" fx:controller="Projekt.Okienka.PracownikKontroler">
+<AnchorPane maxHeight="768.0" maxWidth="1024.0" minHeight="663.0" minWidth="1024.0" prefHeight="663.0" prefWidth="1024.0" xmlns="http://javafx.com/javafx/9.0.1" xmlns:fx="http://javafx.com/fxml/1" >
    <children>
-      <Button layoutX="824.0" layoutY="614.0" mnemonicParsing="false" onAction="#openPotwierdzenieUsuwaniaUsera" prefHeight="34.0" prefWidth="179.0" text="Usuń pracownika">
+      <Button layoutX="824.0" layoutY="614.0" mnemonicParsing="false"  prefHeight="34.0" prefWidth="179.0" text="Usuń pracownika">
          <font>
             <Font name="System Bold" size="12.0" />
          </font>
       </Button>
-      <Button layoutX="20.0" layoutY="40.0" mnemonicParsing="false" onAction="#pokazPracownik" prefHeight="25.0" prefWidth="130.0" text="Pokaż wszystkich">
+      <Button layoutX="20.0" layoutY="40.0" mnemonicParsing="false" prefHeight="25.0" prefWidth="130.0" text="Pokaż wszystkich">
          <font>
             <Font name="System Bold" size="12.0" />
          </font>
@@ -30,13 +30,13 @@
             <Font name="System Bold" size="12.0" />
          </font>
       </Button>
-      <Button layoutX="434.0" layoutY="614.0" mnemonicParsing="false" onAction="#openEdycjaDodawanieUsera" prefHeight="34.0" prefWidth="179.0" text="Dodaj pracownika">
+      <Button layoutX="434.0" layoutY="614.0" mnemonicParsing="false" prefHeight="34.0" prefWidth="179.0" text="Dodaj pracownika">
          <font>
             <Font name="System Bold" size="12.0" />
          </font>
       </Button>
       <TextField fx:id="poleszukania" layoutX="690.0" layoutY="40.0" prefHeight="25.0" prefWidth="192.0" promptText="Wyszukaj..." />
-      <Button layoutX="898.0" layoutY="40.0" mnemonicParsing="false" onAction="#szukajPracownika" prefHeight="25.0" prefWidth="105.0" text="Szukaj" />
+      <Button layoutX="898.0" layoutY="40.0" mnemonicParsing="false" prefHeight="25.0" prefWidth="105.0" text="Szukaj" />
       <Label layoutX="690.0" layoutY="10.0" prefHeight="26.0" prefWidth="116.0" text="Wyszukiwanie:">
          <font>
             <Font name="System Bold" size="16.0" />
