--- a/src/Projekt/Okienka/OkienkaFNS - Usługi.fxml
+++ b/src/Projekt/Okienka/OkienkaFNS - Usługi.fxml
@@ -1,80 +1,35 @@
 <?xml version="1.0" encoding="UTF-8"?>
 
 <?import javafx.scene.control.Button?>
-<?import javafx.scene.control.ComboBox?>
 <?import javafx.scene.control.Label?>
-<?import javafx.scene.control.RadioButton?>
 <?import javafx.scene.control.ScrollPane?>
-<?import javafx.scene.control.Separator?>
 <?import javafx.scene.control.TableColumn?>
 <?import javafx.scene.control.TableView?>
 <?import javafx.scene.control.TextField?>
 <?import javafx.scene.layout.AnchorPane?>
 <?import javafx.scene.text.Font?>
 
-<AnchorPane minHeight="0.0" minWidth="0.0" prefHeight="674.0" prefWidth="1024.0" xmlns="http://javafx.com/javafx/9.0.1" xmlns:fx="http://javafx.com/fxml/1">
+<AnchorPane minHeight="0.0" minWidth="0.0" prefHeight="674.0" prefWidth="1024.0" xmlns="http://javafx.com/javafx/9.0.1" xmlns:fx="http://javafx.com/fxml/1" fx:controller="Projekt.Okienka.UslugaKontroler">
    <children>
-      <Label layoutX="20.0" layoutY="390.0" text="Dodaj pakiet:" AnchorPane.leftAnchor="20.0" AnchorPane.topAnchor="390.0">
-         <font>
-            <Font name="System Bold" size="16.0" />
-         </font>
-      </Label>
-      <Label layoutX="40.0" layoutY="430.0" text="Nazwa:">
-         <font>
-            <Font size="16.0" />
-         </font>
-      </Label>
-      <Label layoutX="40.0" layoutY="510.0" text="Prędkość:">
-         <font>
-            <Font size="16.0" />
-         </font>
-      </Label>
-      <Label layoutX="40.0" layoutY="470.0" text="Technologia:">
-         <font>
-            <Font size="16.0" />
-         </font>
-      </Label>
-      <Label layoutX="40.0" layoutY="590.0" text="Cena:">
-         <font>
-            <Font size="16.0" />
-         </font>
-      </Label>
-      <TextField layoutX="200.0" layoutY="430.0" prefHeight="25.0" prefWidth="150.0" promptText="Nazwa pakietu" />
-      <ComboBox layoutX="200.0" layoutY="590.0" prefWidth="150.0" />
-      <Button layoutX="928.0" layoutY="635.0" mnemonicParsing="false" prefHeight="25.0" prefWidth="75.0" text="Dodaj">
+      <Button layoutX="927.0" layoutY="39.0" mnemonicParsing="false" onAction="#szukajUsluga" prefHeight="25.0" prefWidth="75.0" text="Szukaj">
          <font>
             <Font name="System Bold" size="12.0" />
          </font>
       </Button>
-      <Label layoutX="40.0" layoutY="630.0" text="Okres umowy [mc]:">
-         <font>
-            <Font size="16.0" />
-         </font>
-      </Label>
-      <Button layoutX="927.0" layoutY="39.0" mnemonicParsing="false" prefHeight="25.0" prefWidth="75.0" text="Szukaj">
-         <font>
-            <Font name="System Bold" size="12.0" />
-         </font>
-      </Button>
-      <ScrollPane layoutX="30.0" layoutY="155.0" prefHeight="240.0" prefWidth="984.0" AnchorPane.leftAnchor="20.0" AnchorPane.rightAnchor="20.0" AnchorPane.topAnchor="90.0">
+      <ScrollPane layoutX="30.0" layoutY="155.0" prefHeight="474.0" prefWidth="932.0" AnchorPane.leftAnchor="20.0" AnchorPane.rightAnchor="72.0" AnchorPane.topAnchor="90.0">
          <content>
-            <TableView prefHeight="255.0" prefWidth="968.0">
+            <TableView fx:id="uslugaTable" prefHeight="472.0" prefWidth="931.0">
                <columns>
-                  <TableColumn minWidth="150.0" prefWidth="150.0" text="Nazwa" />
-                  <TableColumn minWidth="100.0" prefWidth="100.0" text="Technologia" />
-                  <TableColumn minWidth="150.0" prefWidth="150.0" text="Prędkość" />
-                  <TableColumn minWidth="100.0" prefWidth="100.0" text="Cena" />
-                  <TableColumn minWidth="100.0" prefWidth="100.0" text="Okres" />
+                  <TableColumn fx:id="nazwaColumn" minWidth="150.0" prefWidth="150.0" text="Nazwa" />
+                  <TableColumn fx:id="technologiaColumn" minWidth="100.0" prefWidth="100.0" text="Technologia" />
+                  <TableColumn fx:id="predkoscColumn" minWidth="150.0" prefWidth="150.0" text="Prędkość" />
+                  <TableColumn fx:id="cenaColumn" minWidth="100.0" prefWidth="100.0" text="Cena" />
+                  <TableColumn fx:id="okresColumn" minWidth="100.0" prefWidth="100.0" text="Okres" />
                </columns>
             </TableView>
          </content>
       </ScrollPane>
-      <Button layoutX="837.0" layoutY="340.0" mnemonicParsing="false" prefHeight="25.0" prefWidth="75.0" text="Modyfikuj">
-         <font>
-            <Font name="System Bold" size="12.0" />
-         </font>
-      </Button>
-      <Button layoutX="928.0" layoutY="340.0" mnemonicParsing="false" prefHeight="25.0" prefWidth="75.0" text="Usuń" AnchorPane.bottomAnchor="308.0" AnchorPane.rightAnchor="20.799999999999997">
+      <Button layoutX="902.0" layoutY="571.0" mnemonicParsing="false" onAction="#openPotwierdzenieUsuwaniaUsera" prefHeight="25.0" prefWidth="75.0" text="Usuń" AnchorPane.bottomAnchor="50.0" AnchorPane.rightAnchor="70.0">
          <font>
             <Font name="System Bold" size="12.0" />
          </font>
@@ -84,19 +39,8 @@
             <Font name="System Bold" size="16.0" />
          </font>
       </Label>
-      <TextField layoutX="717.0" layoutY="37.0" prefHeight="30.0" prefWidth="200.0" promptText="Nazwa pakietu" AnchorPane.leftAnchor="717.0" AnchorPane.topAnchor="37.0" />
-      <Separator layoutX="1.0" layoutY="353.0" prefHeight="43.0" prefWidth="1024.0" AnchorPane.leftAnchor="0.0" AnchorPane.rightAnchor="0.0" AnchorPane.topAnchor="355.0" />
-      <RadioButton layoutX="200.0" layoutY="474.0" mnemonicParsing="false" text="FTTH" />
-      <RadioButton layoutX="260.0" layoutY="474.0" mnemonicParsing="false" text="ADSL2+" />
-      <RadioButton layoutX="350.0" layoutY="554.0" mnemonicParsing="false" text="10 Mbit/s - 512 kbit/s " />
-      <RadioButton layoutX="200.0" layoutY="554.0" mnemonicParsing="false" text="6 Mbit/s - 512 kbit/s" />
-      <RadioButton layoutX="200.0" layoutY="514.0" mnemonicParsing="false" text="20 Mbit/s - 2Mbit/s" />
-      <RadioButton layoutX="500.0" layoutY="514.0" mnemonicParsing="false" text="60 Mbit/s - 2Mbit/s" />
-      <RadioButton layoutX="350.0" layoutY="514.0" mnemonicParsing="false" text="40 Mbit/s - 2Mbit/s" />
-      <RadioButton layoutX="500.0" layoutY="554.0" mnemonicParsing="false" text="15 Mbit/s - 512 kbit/s" />
-      <RadioButton layoutX="200.0" layoutY="634.0" mnemonicParsing="false" text="12" />
-      <RadioButton layoutX="260.0" layoutY="634.0" mnemonicParsing="false" text="24" />
-      <Button layoutX="20.0" layoutY="40.0" mnemonicParsing="false" prefHeight="25.0" prefWidth="130.0" text="Pokaż wszystkich">
+      <TextField fx:id="poleszukania" layoutX="717.0" layoutY="37.0" prefHeight="30.0" prefWidth="200.0" promptText="Nazwa pakietu" AnchorPane.leftAnchor="717.0" AnchorPane.topAnchor="37.0" />
+      <Button layoutX="20.0" layoutY="40.0" mnemonicParsing="false" onAction="#pokazUsluga" prefHeight="25.0" prefWidth="130.0" text="Pokaż wszystkich">
          <font>
             <Font name="System Bold" size="12.0" />
          </font>
@@ -106,5 +50,10 @@
             <Font name="System Bold" size="16.0" />
          </font>
       </Label>
+      <Button layoutX="806.0" layoutY="571.0" mnemonicParsing="false" onAction="#openEdycjaDodawanieUsera" prefHeight="25.0" prefWidth="75.0" text="Dodaj" AnchorPane.bottomAnchor="50.0" AnchorPane.rightAnchor="170.0">
+         <font>
+            <Font name="System Bold" size="12.0" />
+         </font>
+      </Button>
    </children>
 </AnchorPane>
