--- a/src/Projekt/Okienka/OkienkaFNS - Usługi.fxml
+++ b/src/Projekt/Okienka/OkienkaFNS - Usługi.fxml
@@ -2,58 +2,108 @@
 
 <?import javafx.scene.control.Button?>
 <?import javafx.scene.control.Label?>
-<?import javafx.scene.control.ScrollPane?>
+<?import javafx.scene.control.RadioButton?>
 <?import javafx.scene.control.TableColumn?>
 <?import javafx.scene.control.TableView?>
 <?import javafx.scene.control.TextField?>
+<?import javafx.scene.control.ToggleGroup?>
 <?import javafx.scene.layout.AnchorPane?>
 <?import javafx.scene.text.Font?>
 
-<AnchorPane minHeight="0.0" minWidth="0.0" prefHeight="674.0" prefWidth="1024.0" xmlns="http://javafx.com/javafx/9.0.1" xmlns:fx="http://javafx.com/fxml/1" fx:controller="Projekt.Okienka.UslugaKontroler">
+<AnchorPane maxHeight="-Infinity" maxWidth="-Infinity" minHeight="-Infinity" minWidth="-Infinity" prefHeight="647.0" prefWidth="1022.0" xmlns="http://javafx.com/javafx/8.0.141" xmlns:fx="http://javafx.com/fxml/1" fx:controller="Projekt.Okienka.UslugaKontroler">
    <children>
-      <Button layoutX="919.0" layoutY="42.0" mnemonicParsing="false" onAction="#szukajUsluga" prefHeight="25.0" prefWidth="75.0" text="Szukaj">
+      <Button layoutX="240.0" layoutY="47.0" mnemonicParsing="false" onAction="#szukajUsluga" prefHeight="25.0" prefWidth="75.0" text="Szukaj">
          <font>
             <Font name="System Bold" size="12.0" />
          </font>
       </Button>
-      <ScrollPane layoutX="52.0" layoutY="91.0" prefHeight="489.0" prefWidth="857.0" AnchorPane.leftAnchor="52.0" AnchorPane.rightAnchor="115.0" AnchorPane.topAnchor="91.0">
-         <content>
-            <TableView fx:id="uslugaTable" prefHeight="480.0" prefWidth="853.0">
-               <columns>
-                  <TableColumn fx:id="nazwaColumn" minWidth="150.0" prefWidth="170.0" text="Nazwa" />
-                  <TableColumn fx:id="technologiaColumn" minWidth="58.66667175292969" prefWidth="170.0" text="Technologia" />
-                  <TableColumn fx:id="predkoscColumn" minWidth="55.333343505859375" prefWidth="170.0" text="Prędkość" />
-                  <TableColumn fx:id="cenaColumn" minWidth="53.33331298828125" prefWidth="170.0" text="Cena" />
-                  <TableColumn fx:id="okresColumn" minWidth="0.0" prefWidth="170.0" text="Okres" />
-               </columns>
-            </TableView>
-         </content>
-      </ScrollPane>
-      <Button layoutX="832.0" layoutY="610.0" mnemonicParsing="false" onAction="#openPotwierdzenieUsuwaniaUsera" prefHeight="25.0" prefWidth="75.0" text="Usuń" AnchorPane.bottomAnchor="39.0" AnchorPane.rightAnchor="117.0">
+      <TableView fx:id="uslugaTable" layoutX="27.0" layoutY="86.0" prefHeight="255.0" prefWidth="968.0">
+         <columns>
+            <TableColumn fx:id="nazwaColumn" minWidth="150.0" prefWidth="250.0" text="Nazwa" />
+            <TableColumn fx:id="technologiaColumn" minWidth="0.0" prefWidth="180.0" text="Technologia" />
+            <TableColumn fx:id="predkoscColumn" minWidth="150.0" prefWidth="216.0" text="Prędkość" />
+            <TableColumn fx:id="cenaColumn" minWidth="67.0" prefWidth="172.0" text="Cena" />
+            <TableColumn fx:id="okresColumn" minWidth="100.0" prefWidth="149.0" text="Okres" />
+         </columns>
+      </TableView>
+      <Button layoutX="870.0" layoutY="351.0" mnemonicParsing="false" onAction="#openPotwierdzenieUsuwaniaUslug" prefHeight="25.0" prefWidth="125.0" text="Usuń">
          <font>
             <Font name="System Bold" size="12.0" />
          </font>
       </Button>
-      <Label layoutX="706.0" layoutY="10.0" text="Szukaj pakiet:">
+      <Label layoutX="30.0" layoutY="20.0" text="Szukaj pakiet:">
          <font>
             <Font name="System Bold" size="16.0" />
          </font>
       </Label>
-      <TextField fx:id="poleszukania" layoutX="707.0" layoutY="39.0" prefHeight="30.0" prefWidth="200.0" promptText="Nazwa pakietu" AnchorPane.leftAnchor="707.0" AnchorPane.topAnchor="39.0" />
-      <Button layoutX="54.0" layoutY="41.0" mnemonicParsing="false" onAction="#pokazUsluga" prefHeight="25.0" prefWidth="130.0" text="Pokaż wszystkie">
+      <TextField fx:id="poleszukania" layoutX="30.0" layoutY="45.0" prefHeight="30.0" prefWidth="200.0" promptText="Nazwa pakietu" />
+      <Button layoutX="372.0" layoutY="48.0" mnemonicParsing="false" onAction="#pokazUsluga" prefHeight="25.0" prefWidth="150.0" text="Pokaz Wszystkie">
          <font>
             <Font name="System Bold" size="12.0" />
          </font>
       </Button>
-      <Label layoutX="61.0" layoutY="10.0" text="Pakiety:">
+      <Label layoutX="43.0" layoutY="388.0" text="Dodaj pakiet:">
          <font>
             <Font name="System Bold" size="16.0" />
          </font>
       </Label>
-      <Button layoutX="711.0" layoutY="610.0" mnemonicParsing="false" onAction="#openEdycjaDodawanieUsera" prefHeight="25.0" prefWidth="75.0" text="Dodaj" AnchorPane.bottomAnchor="39.0" AnchorPane.rightAnchor="238.0">
+      <Label layoutX="63.0" layoutY="428.0" text="Nazwa:">
+         <font>
+            <Font size="16.0" />
+         </font>
+      </Label>
+      <Label layoutX="63.0" layoutY="508.0" text="Prędkość:">
+         <font>
+            <Font size="16.0" />
+         </font>
+      </Label>
+      <Label layoutX="63.0" layoutY="468.0" text="Technologia:">
+         <font>
+            <Font size="16.0" />
+         </font>
+      </Label>
+      <Label layoutX="644.0" layoutY="424.0" text="Cena:">
+         <font>
+            <Font size="16.0" />
+         </font>
+      </Label>
+      <TextField fx:id="nazwa_usluga" layoutX="177.0" layoutY="428.0" prefHeight="25.0" prefWidth="150.0" promptText="Nazwa pakietu" />
+      <Button fx:id="dodaj" layoutX="702.0" layoutY="517.0" mnemonicParsing="false" onAction="#dodawanie" prefHeight="25.0" prefWidth="139.0" text="Dodaj">
          <font>
             <Font name="System Bold" size="12.0" />
          </font>
       </Button>
+      <Label layoutX="644.0" layoutY="468.0" text="Okres umowy [mc]:">
+         <font>
+            <Font size="16.0" />
+         </font>
+      </Label>
+      <RadioButton fx:id="technologia_usluga1" layoutX="177.0" layoutY="472.0" mnemonicParsing="false" text="FTTH">
+         <toggleGroup>
+            <ToggleGroup fx:id="Group2" />
+         </toggleGroup>
+      </RadioButton>
+      <RadioButton fx:id="technologia_usluga2" layoutX="237.0" layoutY="472.0" mnemonicParsing="false" text="ADSL2+" toggleGroup="$Group2" />
+      <RadioButton fx:id="predkosc_usluga5" layoutX="327.0" layoutY="552.0" mnemonicParsing="false" text="10 Mbit/s - 512 kbit/s ">
+         <toggleGroup>
+            <ToggleGroup fx:id="Group1" />
+         </toggleGroup>
+      </RadioButton>
+      <RadioButton fx:id="predkosc_usluga4" layoutX="177.0" layoutY="552.0" mnemonicParsing="false" text="6 Mbit/s - 512 kbit/s" toggleGroup="$Group1" />
+      <RadioButton fx:id="predkosc_usluga1" layoutX="177.0" layoutY="512.0" mnemonicParsing="false" text="20 Mbit/s - 2Mbit/s" toggleGroup="$Group1" />
+      <RadioButton fx:id="predkosc_usluga3" layoutX="477.0" layoutY="512.0" mnemonicParsing="false" text="60 Mbit/s - 2Mbit/s" toggleGroup="$Group1" />
+      <RadioButton fx:id="predkosc_usluga2" layoutX="327.0" layoutY="512.0" mnemonicParsing="false" text="40 Mbit/s - 2Mbit/s" toggleGroup="$Group1" />
+      <RadioButton fx:id="predkosc_usluga6" layoutX="477.0" layoutY="552.0" mnemonicParsing="false" text="15 Mbit/s - 512 kbit/s" toggleGroup="$Group1" />
+      <TextField fx:id="cena_usluga" layoutX="702.0" layoutY="424.0" prefHeight="25.0" prefWidth="150.0" promptText="nowa cena" />
+      <RadioButton fx:id="okres_usluga1" layoutX="805.0" layoutY="472.0" mnemonicParsing="false" text="12">
+         <toggleGroup>
+            <ToggleGroup fx:id="Group3" />
+         </toggleGroup>
+      </RadioButton>
+      <RadioButton fx:id="okres_usluga2" layoutX="865.0" layoutY="472.0" mnemonicParsing="false" text="24">
+         <toggleGroup>
+            <ToggleGroup fx:id="Group3" />
+         </toggleGroup>
+      </RadioButton>
    </children>
 </AnchorPane>
