--- a/src/Projekt/Okienka/PotwierdzenieUsuwaniaUslug.fxml
+++ b/src/Projekt/Okienka/PotwierdzenieUsuwaniaUslug.fxml
@@ -11,16 +11,16 @@
 <?import javafx.scene.layout.VBox?>
 <?import javafx.scene.text.Font?>
 
-<GridPane hgap="14.0" maxHeight="+Infinity" maxWidth="+Infinity" minHeight="-Infinity" minWidth="-Infinity" vgap="20.0" xmlns="http://javafx.com/javafx/8.0.141" xmlns:fx="http://javafx.com/fxml/1" fx:controller="Projekt.Okienka.UsunKlientaKontroler">
+<GridPane hgap="14.0" maxHeight="+Infinity" maxWidth="+Infinity" minHeight="-Infinity" minWidth="-Infinity" vgap="20.0" xmlns="http://javafx.com/javafx/8.0.141" xmlns:fx="http://javafx.com/fxml/1" fx:controller="Projekt.Okienka.UsunUslugaKontroler">
   <children>
     <VBox maxHeight="+Infinity" maxWidth="+Infinity" minHeight="-Infinity" prefWidth="400.0" spacing="7.0" GridPane.columnIndex="1" GridPane.rowIndex="0">
       <children>
-        <Label text="Czy chcesz usunąć tego klienta z bazy danych?" textAlignment="LEFT" wrapText="true">
+        <Label text="Czy chcesz usunąć te usluge z bazy danych?" textAlignment="LEFT" wrapText="true">
           <font>
             <Font name="System Bold" size="13.0" />
           </font>
         </Label>
-        <Label text="Potwierdzenie spowoduje trwałe usunięcie danych klienta. " textAlignment="LEFT" wrapText="true">
+        <Label text="Potwierdzenie spowoduje trwałe usunięcie danych uslugi. " textAlignment="LEFT" wrapText="true">
           <font>
             <Font size="12.0" />
           </font>
@@ -35,7 +35,7 @@
           </HBox.margin>
         </HBox>
         <Pane maxWidth="+Infinity" HBox.hgrow="ALWAYS" />
-        <Button fx:id="usunButton" cancelButton="true" minWidth="80.0" mnemonicParsing="false" onAction="#deleteKlient" text="Tak" HBox.hgrow="NEVER">
+        <Button fx:id="usunButton" cancelButton="true" minWidth="80.0" mnemonicParsing="false" onAction="#deleteUsluga" text="Tak" HBox.hgrow="NEVER">
           <HBox.margin>
             <Insets />
           </HBox.margin>
